--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:label="@string/title_activity_login_screen"
             android:theme="@style/Theme.FixItb_frontend" />
         <activity
-            android:name=".screens.MainActivity"
+            android:name=".ui.screens.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.FixItb_frontend">
