--- a/local.properties
+++ b/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Apr 19 00:08:21 CEST 2024
+#Mon Apr 22 15:31:41 CEST 2024
 =\=\=\=\=\=\=
 <<<<<<<=HEAD
 >>>>>>>=main
-sdk.dir=C\:\\Users\\Albert Darchiev\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\azizr\\AppData\\Local\\Android\\Sdk
